Mon Apr 19 00:27:03 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_method.c (rb_add_method_def): workarond fix for redefinition
	  of methods. This is because cfp->me uses the rb_method_entry
	  which is freed by redefinition of remove_method. Note that
	  reusing may cause another problem when the usage is changed.
	  [ruby-core:27320] [ruby-core:29464]

Sun Apr 18 22:13:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (string_content): cond_stack and cmdarg_stack are VALUE.

Sun Apr 18 18:07:47 2010  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::IPv4::Regex): make it only accept 0 to 255.
	  [ruby-core:29501]

Sun Apr 18 12:48:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): seems like a symbol-literal when spaces
	  are unbalanced.  [ruby-core:29578]

Sun Apr 18 12:32:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (string_content): preserve cond_stack and cmdarg_stack.
	  [ruby-core:29579]

Sun Apr 18 05:50:58 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: defaulting binary string
	  format to "literal" format.

Sun Apr 18 02:13:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/irb/ruby-lex.rb (identify_identifier): add '_' to the regexp.

Sat Apr 17 23:21:15 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: use AC_TRY_LINK instead of AC_TRY_COMPILE.
	  On Solaris it can compile with signbit but can't link.

Sat Apr 17 20:34:09 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/envutil.rb: update Gem::ConfigMap to fake environment for
	  tests.  Some test of rubygems had failed because envutil.rb changed
	  only RbConfig::CONFIG but not Gem::ConfigMap.

Sat Apr 17 20:31:08 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/irb/ruby-lex.rb (identify_identifier): allow multibyte character
	  as identifier.  [ruby-core:27275]

Sat Apr 17 09:19:27 2010  wanabe  <s.wanabe@gmail.com>
