@@ -1,3 +1,8 @@
+Mon Apr 19 12:46:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/timeout.rb (Timeout#timeout): propagate errors to the
+	  caller.  [ruby-dev:41010]'
+
 Mon Apr 19 00:27:03 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* vm_method.c (rb_add_method_def): workarond fix for redefinition
